--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,18 +1,13 @@
-name: Docker Image CI
-
+name: Docker Build
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --tag alpine-latex:$(date +%s)
+      run: docker build . --tag ee-svg:$(date +%s)
